# llm-chatbot

./: Cargo.toml  Readme.md  index.json
data/: faq.txt  faq1.txt
src/: cli.rs  completion.rs  lexer.rs  main.rs  parser.rs  schemas.rs  splitter.rs  util.rs
src/api/: answer.rs
src/routes/: answer.rs  mod.rs  ws.rs
