[package]
name = "llm-chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
rust-bert = "0.21.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }
pdf-extract = "0.6"
futures-util = "0.3"
axum = "0.6"
